--- a/final code/bitcoin.html
+++ b/final code/bitcoin.html
@@ -144,7 +144,7 @@ function onFrame(event) {
 </head>
 <body style="background:#444444">
   <canvas id="myCanvas" width="500" height="500" style="background:black;"></canvas>
-  <canvas id="bitcoinData" width="500" height="500" style="background:black;"></canvas>
+  <!-- <canvas id="bitcoinData" width="500" height="500" style="background:black;"></canvas> -->
 	
 </body>
 </html>
